--- a/requirements.txt
+++ b/requirements.txt
@@ -69,3 +69,7 @@ tzdata==2024.1
 urllib3==2.2.2
 wrapt==1.16.0
 yarl==1.9.4
+python-dotenv==1.0.0
+llama-index==0.10.27
+llama-index-llms-openai==0.1.15
+llama-index-embeddings-openai==0.1.7
